--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -16,7 +16,7 @@
                                 <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">{{rs.title}} <br> </h1>
                                 <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">{{rs.description }}</p>
                                 <ul class="post-meta">
-                                    <li><a href="author.html" style="color: white">by.Admin</a></li>
+                                    <li><a  style="color: white">by.{{ rs.user.first_name }}</a></li>
                                     <li style="color: white">{{rs.create_at.date}}</li>
                                 </ul>
                                 <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">({{rs.category}}) </p>
