password and profile update sayfası oluşturuldu

--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -84,7 +84,7 @@
                     </li><!-- / Aboutus -->
                     <!-- Refrences -->
                     <li class="dropdown ">
-                        <a href="/referanslarımız">Referanslar</a>
+                        <a href="/referanslarimiz">Referanslar</a>
                     </li><!-- / Refrences -->
                     <!-- Contact -->
                     <li class="dropdown ">
