--- a/user/templates/user_panel.html
+++ b/user/templates/user_panel.html
@@ -1,14 +1,14 @@
 <!-- category widget -->
 <div class="aside-widget">
     <div class="section-title">
-        <h2 class="title">User Panel</h2 class="title">
+        <h2 class="title">User Panel</h2>
     </div>
 
     <div class="category-widget">
         <ul>
 
             <li><a href="/user">User Profile</a></li>
-            <li><a href="#">My Comments</a></li>
+            <li><a href="/user/comments">My Comments</a></li>
             <li><a href="#">My Blogs</a></li>
             <li><a href="#">My Favorits</a></li>
             <li><a href="/logout">Logout</a></li>
