--- a/home/templates/signup.html
+++ b/home/templates/signup.html
@@ -53,7 +53,7 @@
                             {% for message in messages %}
                                 <div class="alertPart">
                                     <div class="alert alert-{{ message.tags }}" role="alert">
-                                        {{ message }}</div>  <!--mesaj veriyor -->
+                                        {{ message|safe }}</div>  <!--mesaj veriyor -->
                                 </div>
                             {% endfor %}
                         {% endif %}
