--- a/user/templates/user_update.html
+++ b/user/templates/user_update.html
@@ -1,5 +1,5 @@
 {% extends 'homebase.html' %}
-{% block title %} {{ profile.user.username }}  Profile {% endblock %}
+{% block title %} {{ profile.user.username }}  Profile update {% endblock %}
 {% block keywords %} {{ settings.keywords }}  {% endblock %}
 {% block decription %} {{ settings.decription }}  {% endblock %}
 
@@ -16,10 +16,10 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="content">
-                        <h1 class="page-name" style="color: #0c0c0c">User profile</h1>
+                        <h1 class="page-name" style="color: #0c0c0c">User profile update</h1>
                         <ol class="breadcrumb">
                             <li><a href="/">Anasayfa</a></li>
-                            <li class="active">User Profile</li>
+                            <li class="active">User Update</li>
                         </ol>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                     <div class="aside-widget">
                         <div class="dashboard-wrapper dashboard-user-profile">
                             <div class="section-title">
-                                <h2 class="title">User Profile</h2>
+                                <h2 class="title">User Information</h2>
                             </div>
 
                             <div class="table-responsive">
@@ -60,46 +60,19 @@
                                         </div>
                                     {% endfor %}
                                 {% endif %}
-                                <table class="table">
+                                <div class="pull-center text-center" href="#!">
+                                    <img class="media-object user-img" src="{{ user.userprofile.image.url }}">
 
-                                    <tr>
-                                        <th>
-                                            <a href="/user/update" class="primary-button">Update Profile</a>
-                                            <a href="/user/password" class="btn btn-main btn-medium btn-round">Change Password</a>
-                                        </th>
-                                        <div class="pull-left text-center" href="#!">
-                                            <td><img class="media-object user-img" src="{{ profile.image.url }}">
-                                            </td>
-                                        </div>
-                                    </tr>
-                                    <tr>
-                                        <th>Name Surname</th>
-                                        <td>{{ profile.user_name }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Email</th>
-                                        <td>{{ profile.user.email }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Phone</th>
-                                        <td>{{ profile.phone }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Addres</th>
-                                        <td>{{ profile.address }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th>City</th>
-                                        <td>{{ profile.city }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Country</th>
-                                        <td>{{ profile.country }}</td>
-                                    </tr>
+                                </div>
 
-
-                                    </tbody>
-                                </table>
+                                <form method="POST" enctype="multipart/form-data">
+                                    {% csrf_token %}
+                                    {{ user_form.as_p }}
+                                    {{ profile_form.as_p }}
+                                    <div class="text-center">
+                                        <button type="submit" class="btn btn-main text-center">Update</button>
+                                    </div>
+                                </form>
                             </div>
 
                         </div>
