--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -28,7 +28,7 @@
                                                                        style="height: 120px">{{ rs.description }}</a>
                                     </h5>
                                     <ul class="post-meta" style="height: 10px">
-                                        <li><a >By.{{ rs.user.first_name }}</a></li>
+                                        <li><a>By.{{ rs.user.first_name }}</a></li>
                                         <li>{{ rs.create_at.date }}</li>
                                         <li>{{ rs.category }}</li>
                                         <li>{{ rs.comments.count }}</li>
@@ -43,40 +43,6 @@
                 </div>
                 <!-- /row -->
 
-                <!-- row  day -->
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="section-title">
-                            <h2 class="title">Deals Of The Day</h2>
-                        </div>
-                    </div>
-                    {% for rs in dayblogs %}
-                        <!-- post -->
-                        <div class="col-md-4">
-                            <div class="post post-sm">
-                                <a class="post-img" href="/blog/{{ rs.id }}/{{ rs.slug }}"><img src="{{ rs.image.url }}"
-                                                                                                alt=""
-                                                                                                style="height: 150px"></a>
-                                <div class="post-body" style="height: 140px">
-                                    <div class="post-category">
-                                        <a href="/blog/{{ rs.id }}/{{ rs.slug }}">{{ rs.title }}</a>
-                                    </div>
-                                    <h3 class="post-title title-sm"><a
-                                            href="/blog/{{ rs.id }}/{{ rs.slug }}">{{ rs.description }}</a>
-                                    </h3>
-                                    <ul class="post-meta">
-                                        <li><a >By.{{ rs.user.first_name }}--{{ rs.create_at.date }}</a></li>
-                                        <li>{{ rs.category }}</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /post -->
-                    {% endfor %}
-
-
-                </div>
-                <!-- /row -->
 
             </div>
             <div class="col-md-4">
@@ -112,22 +78,6 @@
                 </div>
                 <!-- /social widget -->
 
-                <!-- category widget -->
-                <div class="aside-widget">
-                    <div class="section-title">
-                        <h2 class="title">Categories</h2>
-                    </div>
-                    {% for rs in category %}
-                        <div class="category-widget">
-                            <ul>
-                                {% if not rs.is_leaf_node %}
-                                    <li><a href="/category/{{ rs.id }}/{{ rs.slug }}">{{ rs.title }}</a></li>
-                                {% endif %}
-                            </ul>
-                        </div>
-                    {% endfor %}
-                </div>
-                <!-- /category widget -->
 
                 <br>
                 <!-- post widget -->
@@ -149,7 +99,7 @@
                                     <h3 class="post-title"><a
                                             href="/blog/{{ rs.id }}/{{ rs.slug }}">{{ rs.description }}</a></h3>
                                     <ul class="post-meta">
-                                        <li><a >By.{{ rs.user.first_name }}--{{ rs.create_at.date }}</a></li>
+                                        <li><a>By.{{ rs.user.first_name }}--{{ rs.create_at.date }}</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -162,12 +112,57 @@
                 </div>
             </div>
             <!-- /row -->
+
+
         </div>
         <!-- /container -->
+
+
     </div>
     <!-- /SECTION -->
 
+    <!-- SECTION -->
+    <div class="section">
+        <!-- container -->
+        <div class="container">
+            <!-- row -->
+            <div class="col-md-12">
+                <!-- row  day -->
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="section-title">
+                            <h2 class="title">Deals Of The Day</h2>
+                        </div>
+                    </div>
+                    {% for rs in dayblogs %}
+                        <!-- post -->
+                        <div class="col-md-3">
+                            <div class="post post-sm">
+                                <a class="post-img" href="/blog/{{ rs.id }}/{{ rs.slug }}"><img src="{{ rs.image.url }}"
+                                                                                                alt=""
+                                                                                                style="height: 150px"></a>
+                                <div class="post-body" style="height: 140px">
+                                    <div class="post-category">
+                                        <a href="/blog/{{ rs.id }}/{{ rs.slug }}">{{ rs.title }}</a>
+                                    </div>
+                                    <h3 class="post-title title-sm"><a
+                                            href="/blog/{{ rs.id }}/{{ rs.slug }}">{{ rs.description }}</a>
+                                    </h3>
+                                    <ul class="post-meta">
+                                        <li><a>By.{{ rs.user.first_name }}--{{ rs.create_at.date }}</a></li>
+                                        <li>{{ rs.category }}</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /post -->
+                    {% endfor %}
 
+                </div>
+                <!-- /row -->
+            </div>
+        </div>
+    </div>
     <!-- SECTION -->
     <div class="section">
         <!-- container -->
@@ -185,15 +180,15 @@
                     <div class="col-md-4">
                         <!-- post -->
                         <div class="post post-widget">
-                            <a class="post-img" href="blog-post.html"><img src="{{ rs.image.url }}" alt=""
+                            <a class="post-img" href="/blog/{{ rs.id }}/{{ rs.slug }}"><img src="{{ rs.image.url }}" alt=""
                                                                            style="height: 80px; "></a>
                             <div class="post-body" style="height: 80px">
                                 <div class="post-category">
-                                    <a href="category.html">{{ rs.title }}</a>
+                                    <a href="/blog/{{ rs.id }}/{{ rs.slug }}">{{ rs.title }}</a>
                                 </div>
-                                <h5><a href="blog-post.html">{{ rs.description }}</a></h5>
+                                <h5><a href="/blog/{{ rs.id }}/{{ rs.slug }}">{{ rs.description }}</a></h5>
                                 <ul class="post-meta">
-                                    <li><a href="author.html">{{ rs.category }}</a></li>
+                                    <li><a >{{ rs.category }}</a></li>
                                 </ul>
                             </div>
                         </div>
