--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -139,6 +139,37 @@
                     <li class="dropdown ">
                         <a href="/faq">SSS</a>
                     </li><!-- / Contact -->
+                    <!-- Content -->
+                    {% recursetree content %}
+                    <li class="dropdown dropdown-slide">
+                        <a href="/content/{{ node.id }}/{{ node.slug }}"
+                                {% if not node.is_leaf_node %}
+                           class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
+                           data-delay="350"
+                           role="button" aria-haspopup="true" aria-expanded="false"{% endif %}>
+                            {{ node.title }}{% if not node.is_leaf_node %}
+                                <span class="tf-ion-ios-arrow-down"></span>{% endif %}</a>
+                        <div class="custom-menu">
+                            <div class="row">
+
+
+                                <div class="col-md-12">
+
+
+                                    {% if not node.is_leaf_node %}
+                                        <ul class="list-links" class="children">
+                                            <li><a href="">{{ children }}</a></li>
+
+                                        </ul>
+                                    {% endif %}
+                                    <hr class="hidden-md hidden-lg">
+
+                                </div>
+                            </div>
+                        </div>
+                    </li><!-- / Content -->
+                    {% endrecursetree %}
+
                 </ul><!-- / .nav .navbar-nav -->
 
 
