Uye Ckeditor ile İçerik Ekleme listeleme Düzenleme Silme

--- a/user/templates/user_panel.html
+++ b/user/templates/user_panel.html
@@ -10,7 +10,7 @@
             <li><a href="/user">User Profile</a></li>
             <li><a href="/user/comments">My Comments</a></li>
             <li><a href="#">My Blogs</a></li>
-            <li><a href="#">My Content</a></li>
+            <li><a href="/user/contents">My Content</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
     </div>
