--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -1,157 +1,111 @@
 {% load static %}
-<!-- FOOTER -->
-<footer id="footer">
-    <!-- container -->
+<footer class="footer section text-center">
     <div class="container">
-        <!-- row -->
         <div class="row">
-            <div class="col-md-3">
-                <div class="footer-widget">
-                    <div class="footer-logo">
-                        <!-- Site Logo -->
-                        <div class="logo text-center">
-                            <a href="/">
-                                <!-- replace logo here -->
-                                <svg width="160px" height="29px" viewBox="0 0 180 29" version="1.2" xmlns="http://www.w3.org/2000/svg"
-                                     xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-size="40"
-                                       font-family="AustinBold, Austin" font-weight="bold">
-                                        <g id="Group" transform="translate(-108.000000, -297.000000)" fill="#000000">
-                                            <text id="AVIATO">
-                                                <tspan x="104" y="325">Unsal Blogs</tspan>
-                                            </text>
-                                        </g>
-                                    </g>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <p>{{ settings.description }}</p>
-                    <ul class="contact-social">
-                        <li><a href="{{ settings.facebook }}" class="social-facebook"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="{{ settings.twitter }}" class="social-twitter"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="{{ settings.instagram }}" class="social-instagram"><i class="fa fa-instagram"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="footer-widget">
-                    <h3 class="footer-title">Categories</h3>
-                    {% for rs in category %}
-                        <div class="category-widget">
-                            <ul>
-                                {% if not rs.is_leaf_node %}
-                                    <li><a href="/category/{{ rs.id }}/{{ rs.slug }}">{{ rs.title }}</a></li>
-                                {% endif %}
-                            </ul>
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="footer-widget">
-                    <h3 class="footer-title">Tags</h3>
-                    <div class="tags-widget">
-                        <ul>
-                            <li><a href="#">Social</a></li>
-                            <li><a href="#">Lifestyle</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Travel</a></li>
-                            <li><a href="#">Technology</a></li>
-                            <li><a href="#">Fashion</a></li>
-                            <li><a href="#">Life</a></li>
-                            <li><a href="#">News</a></li>
-                            <li><a href="#">Magazine</a></li>
-                            <li><a href="#">Food</a></li>
-                            <li><a href="#">Health</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="footer-widget">
-                    <h3 class="footer-title">Newsletter</h3>
-                    <div class="newsletter-widget">
-                        <form>
-                            <p>Nec feugiat nisl pretium fusce id velit ut tortor pretium.</p>
-                            <input class="input" name="newsletter" placeholder="Enter Your Email">
-                            <button class="primary-button">Subscribe</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /row -->
+            <div class="col-md-12">
+                <ul class="social-media">
+                    <li>
+                        <a href="{{ settings.facebook }}">
+                            <i class="tf-ion-social-facebook"></i>
+                        </a>
+                    </li>
 
-
-        <!-- row -->
-        <div class="footer-bottom row">
-            <div class="col-md-6 col-md-push-6">
-                <ul class="footer-nav">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/hakkimizda">About Us</a></li>
-                    <li><a href="/iletisim">Contacts</a></li>
+                    <li>
+                        <a href="{{ settings.instagram }}">
+                            <i class="tf-ion-social-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ settings.twitter }}">
+                            <i class="tf-ion-social-twitter"></i>
+                        </a>
+                    </li>
 
                 </ul>
-            </div>
-            <div class="col-md-6 col-md-pull-6">
-                <div class="footer-copyright">
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">{{ settings.company }}</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
+                <ul class="footer-menu text-uppercase">
+                    <li>
+                        <a href="/iletisim">İletisim</a>
+                    </li>
+                    <li>
+                        <a href="/hakkimizda">Hakkımızda</a>
+                    </li>
+                    <li>
+                        <a href="/referanslarimiz">Referanslar</a>
+                    </li>
+                    <li>
+                        <a href="/faq">SSS</a>
+                    </li>
+                </ul>
+                <p class="copyright-text">Copyright &copy;2021,Developed by <a>Mustafa Unsal | </a>All rights reserved :{{ settings.company }}</p>
+                <div class="footer-logo">
+                    <!-- Site Logo -->
+                    <div class="logo text-center">
+                        <a href="/">
+                            <!-- replace logo here -->
+                            <svg width="160px" height="29px" viewBox="0 0 180 29" version="1.2"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
+                                   font-size="40"
+                                   font-family="AustinBold, Austin" font-weight="bold">
+                                    <g id="Group" transform="translate(-108.000000, -297.000000)" fill="#000000">
+                                        <text id="AVIATO">
+                                            <tspan x="104" y="325">Unsal Blogs</tspan>
+                                        </text>
+                                    </g>
+                                </g>
+                            </svg>
+                        </a>
+                    </div>
+
                 </div>
+                <br>
+                <p>{{ settings.description }}</p>
             </div>
         </div>
-        <!-- /row -->
     </div>
-    <!-- /container -->
 </footer>
-
-
 
 <!-- /FOOTER -->
 <!-- jQuery Plugins -->
-<script src="{% static 'js/bootstrap.min.js'%}"></script>
-<script src="{% static 'js/jquery.stellar.min.js'%}"></script>
-<script src="{% static 'js/main.js'%}"></script>
-
-
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/jquery.stellar.min.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
 
 
 <!-- Ek slider-->
 <!-- Main jQuery -->
 
 <!-- Bootstrap 3.1 -->
-<script src="{% static 'plugins/bootstrap/js/bootstrap.min.js'%}"></script>
+<script src="{% static 'plugins/bootstrap/js/bootstrap.min.js' %}"></script>
 <!-- Bootstrap Touchpin -->
-<script src="{% static 'plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js'%}"></script>
+<script src="{% static 'plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js' %}"></script>
 <!-- Instagram Feed Js -->
-<script src="{% static 'plugins/instafeed/instafeed.min.js'%}"></script>
+<script src="{% static 'plugins/instafeed/instafeed.min.js' %}"></script>
 <!-- Video Lightbox Plugin -->
-<script src="{% static 'plugins/ekko-lightbox/dist/ekko-lightbox.min.js'%}"></script>
+<script src="{% static 'plugins/ekko-lightbox/dist/ekko-lightbox.min.js' %}"></script>
 <!-- Count Down Js -->
-<script src="{% static 'plugins/syo-timer/build/jquery.syotimer.min.js'%}"></script>
+<script src="{% static 'plugins/syo-timer/build/jquery.syotimer.min.js' %}"></script>
 
 <!-- slick Carousel -->
-<script src="{% static 'plugins/slick/slick.min.js'%}"></script>
-<script src="{% static 'plugins/slick/slick-animation.min.js'%}"></script>
+<script src="{% static 'plugins/slick/slick.min.js' %}"></script>
+<script src="{% static 'plugins/slick/slick-animation.min.js' %}"></script>
 
 <!-- Google Mapl -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"></script>
-<script type="text/javascript" src="{% static 'plugins/google-map/gmap.js'%}"></script>
+<script type="text/javascript" src="{% static 'plugins/google-map/gmap.js' %}"></script>
 
 <!-- Main Js File -->
-<script src="{% static 'js/script.js'%}"></script>
-
-
+<script src="{% static 'js/script.js' %}"></script>
 
 
 <!-- Category -->
 <!-- jQuery Plugins -->
 
-<script src="{% static 'js1/bootstrap.min.js'%}"></script>
-<script src="{% static 'js1/slick.min.js'%}"></script>
-<script src="{% static 'js1/nouislider.min.js'%}"></script>
-<script src="{% static 'js1/jquery.zoom.min.js'%}"></script>
-<script src="{% static 'js1/main.js'%}"></script>
+<script src="{% static 'js1/bootstrap.min.js' %}"></script>
+<script src="{% static 'js1/slick.min.js' %}"></script>
+<script src="{% static 'js1/nouislider.min.js' %}"></script>
+<script src="{% static 'js1/jquery.zoom.min.js' %}"></script>
+<script src="{% static 'js1/main.js' %}"></script>
 
