--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -81,7 +81,9 @@
 
                                 <ul class="custom-menu">
                                     <li><a href="/user/"><i class="fa fa-user-o"></i> My Profile</a></li>
-                                    <li><a href="#"><i class="fa fa-heart-o"></i> My Blogs</a></li>
+                                    <li><a href="/user/comments"><i class="fa fa-comments"></i> My Comments</a></li>
+                                    <li><a href="/user/contents"><i class="fa fa-newspaper-o"></i> My Contents</a></li>
+                                    <li><a href="#"><i class="fa fa-bookmark"></i> My Blogs</a></li>
                                     <li><a href="/logout/"><i class="fa fa-unlock"></i> Logout</a></li>
                                 </ul>
 
