--- a/user/templates/user_panel.html
+++ b/user/templates/user_panel.html
@@ -9,7 +9,7 @@
 
             <li><a href="/user">User Profile</a></li>
             <li><a href="/user/comments">My Comments</a></li>
-            <li><a href="#">My Blogs</a></li>
+            <li><a href="/user/blogs">My Blogs</a></li>
             <li><a href="/user/contents">My Content</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
